--- a/apps/kamsguard-web/src/app/app.component.html
+++ b/apps/kamsguard-web/src/app/app.component.html
@@ -1,16 +1,14 @@
 <div class="app-container">
-  <div class="app-header">
-    <app-header></app-header>
-  </div>
-
   <div class="main-content">
-    <!-- <app-sidenav *ngIf="isSidebarVisible"></app-sidenav> -->
-    <div class="content" [ngClass]="isSidebarVisible ? 'with-sidebar' : 'without-sidebar'">
+    <div *ngIf="!isDashboardRoute()" class="app-header">
+      <app-header></app-header>
+    </div>
+    <div class="content">
       <router-outlet></router-outlet>
     </div>
   </div>
 
-  <div class="app-footer">
+  <div *ngIf="!isDashboardRoute()" class="app-footer">
     <app-footer></app-footer>
   </div>
 </div>
