--- a/apps/kamsguard-web/src/app/features/dashboard.component.scss
+++ b/apps/kamsguard-web/src/app/features/dashboard.component.scss
@@ -1,94 +1,56 @@
+$primary-color: #21325D;
+$secondary-color: #627792;
+$card-color: #FFFFFF;
+$text-color: #21325D;
+$header-color: #627792;
+$highlight-color: #FC5546;
+$background-color: #FFFFFF;
+$shadow-color: rgba(0, 0, 0, 0.1);
 
-/* styles.scss */
+.app-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  background-color: $background-color;
+}
 
-/* Define a mixin for common styles */
-@mixin menu-item {
-  color: #21325D;
-  text-decoration: none;
+.app-header {
+  // background-color: $header-color;
   display: flex;
   align-items: center;
-  padding: 10px;
-  border-radius: 10px;
-  transition: all 0.3s;
-
-  .menu-icon {
-    font-size: 24px;
-    margin-right: 10px;
-  }
-
-  .menu-text {
-    // font-weight: bold;
-    // font-size: 16px;
-  }
-}
-mat-icon {
-  justify-content: center;
-  padding-top: 4px;
-}
-.sidebar {
-  background-color: #FFFFFF;
-  // width: 300px;
-  padding: 20px;
+  padding: 0 px;
   position: fixed;
-  height: 100%;
   top: 0;
   left: 0;
-  overflow-x: hidden;
-  margin-top: 48px;
-  transition: transform 0.3s, opacity 0.3s;
-
-  &.showSidebar {
-    transform: translateX(0);
-    opacity: 1;
-  }
-
-  &.hideSidebar {
-    transform: translateX(-100%);
-    opacity: 0;
-  }
+  right: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 5px $shadow-color;
 }
 
-.sidebar ul {
-  list-style: none;
-  padding: 0;
+.dashboard-container {
+  display: flex;
+  flex: 1;
+  margin-top: 80px; 
 }
 
-.sidebar li {
-  margin-bottom: 10px;
+app-sidenav {
+  width: 250px;
+  // background-color: $primary-color;
+  height: calc(100vh - 80px); 
+  position: fixed;
+  top: 80px; /* Below the fixed header */
+  left: 0;
+  z-index: 999;
+  padding-top: 20px;
+  // box-shadow: 2px 0 5px $shadow-color;
 }
 
-.sidebar li a {
-  @include menu-item;
-
-  &:hover {
-    background-color: rgb(241, 241, 241);
-    // color: #6c6c6c;
-    cursor: pointer;
-  }
-
-  &.active {
-    color: #FC5546;
-    background-color: rgb(241, 241, 241);
-  }
-
-  &.active:hover {
-    // Additional hover styles for active state
-  }
-}
-
-.sub-menu {
-  padding-left: 20px; /* Adjust the value to your desired padding */
-}
-
-@media (max-width: 768px) {
-  .sidebar {
-    width: 100%;
-    background-color: #FFFFFF; // Slightly transparent
-    opacity: 0.9; // Adjust transparency
-    z-index: 1000;
-  }
-
-  .content {
-    margin-left: 0; // Ensure main content is not pushed
-  }
+.content {
+  margin-left: 250px; /* Leave space for the sidebar */
+  padding: 20px;
+  background-color: $card-color;
+  flex: 1;
+  overflow-y: auto;
+  min-height: calc(100vh - 80px); /* Full height minus the header */
+  box-shadow: inset 0 0 10px $shadow-color;
 }
