--- a/apps/kamsguard-web/src/app/app.component.html
+++ b/apps/kamsguard-web/src/app/app.component.html
@@ -4,6 +4,7 @@
       <app-header></app-header>
     </div>
     <div class="content">
+      <app-toastr></app-toastr>
       <router-outlet></router-outlet>
     </div>
   </div>
