--- a/apps/kamsguard-web/src/app/core/authentication/login/login.component.html
+++ b/apps/kamsguard-web/src/app/core/authentication/login/login.component.html
@@ -1,57 +1,73 @@
 <div class="auth-container">
-    <mat-card>
-      <mat-card-title>Login into your account</mat-card-title>
-      <mat-card-content>
-        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <mat-form-field appearance="fill">
-            <mat-label>Email</mat-label>
-            <input
-              matInput
-              formControlName="email"
-              placeholder="Enter your email"
-              [ngClass]="{ 'invalid': loginForm.controls['email'].invalid && loginForm.controls['email'].touched }"
-              required
-            />
-            <mat-error *ngIf="loginForm.controls['email'].hasError('required')">
-              Email is required
-            </mat-error>
-            <mat-error *ngIf="loginForm.controls['email'].hasError('email')">
-              Enter a valid email address
-            </mat-error>
-          </mat-form-field>
-  
-          <mat-form-field appearance="fill">
-            <mat-label>Password</mat-label>
-            <input
-              matInput
-              formControlName="password"
-              type="password"
-              placeholder="Enter your password"
-              [ngClass]="{ 'invalid': loginForm.controls['password'].invalid && loginForm.controls['password'].touched }"
-              required
-            />
-            <mat-error *ngIf="loginForm.controls['password'].hasError('required')">
-              Password is required
-            </mat-error>
-            <mat-error *ngIf="loginForm.controls['password'].hasError('minlength')">
-              Password must be at least 6 characters long
-            </mat-error>
-          </mat-form-field>
-  
-          <div class="auth-actions">
-            <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid">
-              Login
-            </button>
-          </div>
-  
-          <div class="switch-mode">
-            <span>Don't have an account?</span>
-            <button mat-button type="button" routerLink="/register">
-              Sign Up
-            </button>
-          </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
-  </div>
-  
+  <mat-card>
+    <mat-card-title>Login into your account</mat-card-title>
+    <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            formControlName="email"
+            placeholder="Enter your email"
+            [ngClass]="{
+              invalid:
+                loginForm.controls['email'].invalid &&
+                loginForm.controls['email'].touched
+            }"
+            required
+          />
+          <mat-error *ngIf="loginForm.controls['email'].hasError('required')">
+            Email is required
+          </mat-error>
+          <mat-error *ngIf="loginForm.controls['email'].hasError('email')">
+            Enter a valid email address
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input
+            matInput
+            formControlName="password"
+            type="password"
+            placeholder="Enter your password"
+            [ngClass]="{
+              invalid:
+                loginForm.controls['password'].invalid &&
+                loginForm.controls['password'].touched
+            }"
+            required
+          />
+          <mat-error
+            *ngIf="loginForm.controls['password'].hasError('required')"
+          >
+            Password is required
+          </mat-error>
+          <mat-error
+            *ngIf="loginForm.controls['password'].hasError('minlength')"
+          >
+            Password must be at least 6 characters long
+          </mat-error>
+        </mat-form-field>
+
+        <div class="auth-actions">
+          <button
+            mat-raised-button
+            color="primary"
+            type="submit"
+            [disabled]="loginForm.invalid"
+          >
+            Login
+          </button>
+        </div>
+
+        <div class="switch-mode">
+          <span>Don't have an account?</span>
+          <button mat-button type="button" routerLink="/register">
+            Sign Up
+          </button>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
