--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -1,25 +1,29 @@
 <mat-toolbar [ngClass]="{'hidden': !isHeaderVisible}" class="custom-toolbar">
-<div class="brand">
-  <!-- <button
-  mat-icon-button
-  aria-label="Toggle Sidebar"
-  (click)="toggleSidebar()"
->
-  <mat-icon>menu</mat-icon>
-</button> -->
-<span class="brand-logo" routerLink="/">Kamsguard Solutions</span>
+  <div class="brand">
+    <span class="brand-logo" routerLink="/">Kamsguard Solutions</span>
+  </div>
 
-</div>
+  <!-- Toggle button for mobile view -->
+  <button
+    mat-icon-button
+    aria-label="Toggle menu"
+    class="toggle-menu"
+    (click)="toggleMenu()"
+  >
+    <mat-icon>menu</mat-icon>
+  </button>
 
-<div class="nav-links-container">
-  <a class="nav-link" routerLink="/industrial-solutions" routerLinkActive="active">Industrial Solutions</a>
-  <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
-  <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">About Us</a>
-</div>
+  <!-- Navigation Links for Desktop & Mobile -->
+  <div class="nav-container" [ngClass]="{'show-menu': isMenuOpen}">
+    <div class="nav-links-container">
+      <a class="nav-link" routerLink="/industrial-solutions" routerLinkActive="active">Industrial Solutions</a>
+      <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+      <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">About Us</a>
+    </div>
 
-<div class="auth-links-container">
-    <a class="auth-link" routerLink="/login" routerLinkActive="active">Login</a>
-    <a class="auth-link" routerLink="/register" routerLinkActive="active">Register</a>
-</div>
-
+    <div class="auth-links-container">
+      <a class="auth-link" routerLink="/login" routerLinkActive="active">Login</a>
+      <a class="auth-link" routerLink="/register" routerLinkActive="active">Register</a>
+    </div>
+  </div>
 </mat-toolbar>
