--- a/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
+++ b/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
@@ -1,26 +1,41 @@
-<!-- company-overview.component.html -->
-
-<mat-card *ngFor="let company of companies">
+<!-- components/connected-devices/connected-devices.component.html -->
+<mat-card *ngFor="let company of companies" class="company-card">
   <mat-card-header>
     <mat-card-title>{{ company.companyName }}</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <div *ngFor="let site of company.sites">
+    <div *ngFor="let site of company.sites" class="site-section">
       <h3>{{ site.siteName }}</h3>
       <table mat-table [dataSource]="site.devices" class="mat-elevation-z8">
 
-        <!-- Device Column -->
-        <ng-container matColumnDef="device">
-          <th mat-header-cell *matHeaderCellDef> Device </th>
-          <td mat-cell *matCellDef="let device"> {{ device.device }} </td>
+        <!-- Site ID Column -->
+        <ng-container matColumnDef="siteId">
+          <th mat-header-cell *matHeaderCellDef> Site ID </th>
+          <td mat-cell *matCellDef="let device"> {{ company.companyName }}-{{ site.siteName }} </td>
         </ng-container>
 
-        <!-- Last Activity Column -->
-        <ng-container matColumnDef="lastActivity">
-          <th mat-header-cell *matHeaderCellDef> Last Activity </th>
-          <td mat-cell *matCellDef="let device"> {{ device.lastActivity | date:'short' }} </td>
+        <!-- Device ID Column -->
+        <ng-container matColumnDef="deviceId">
+          <th mat-header-cell *matHeaderCellDef> Device ID </th>
+          <td mat-cell *matCellDef="let device"> {{ device.deviceId }} </td>
         </ng-container>
 
+        <!-- Status Column -->
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef> Status </th>
+          <td mat-cell *matCellDef="let device">
+            <span class="status-icon" [ngClass]="device.status.toLowerCase()"></span>
+            {{ device.status | titlecase }}
+          </td>
+        </ng-container>
+
+        <!-- Last Active Time Column -->
+        <ng-container matColumnDef="lastActiveTime">
+          <th mat-header-cell *matHeaderCellDef> Last Active Time </th>
+          <td mat-cell *matCellDef="let device"> {{ device.lastActiveTime | date:'short' }} </td>
+        </ng-container>
+
+        <!-- Header and Row Declarations -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
