--- a/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
+++ b/apps/kamsguard-web/src/app/features/connected-devices/connected-devices.component.html
@@ -5,9 +5,8 @@
   </mat-card-header>
   <mat-card-content>
     <div *ngFor="let site of company.sites" class="site-section">
-      <h3>{{ site.siteName }}</h3>
+      <h3 class="site-name">{{ site.siteName }}</h3>
       <table mat-table [dataSource]="site.devices" class="mat-elevation-z8">
-
         <!-- Site ID Column -->
         <ng-container matColumnDef="siteId">
           <th mat-header-cell *matHeaderCellDef> Site ID </th>
@@ -18,15 +17,6 @@
         <ng-container matColumnDef="deviceId">
           <th mat-header-cell *matHeaderCellDef> Device ID </th>
           <td mat-cell *matCellDef="let device"> {{ device.deviceId }} </td>
-        </ng-container>
-
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef> Status </th>
-          <td mat-cell *matCellDef="let device">
-            <span class="status-icon" [ngClass]="device.status.toLowerCase()"></span>
-            {{ device.status | titlecase }}
-          </td>
         </ng-container>
 
         <!-- Last Active Time Column -->
