--- a/apps/kamsguard-web/src/app/core/layout/header/header.component.html
+++ b/apps/kamsguard-web/src/app/core/layout/header/header.component.html
@@ -2,28 +2,24 @@
   <div class="brand">
     <span class="brand-logo" routerLink="/">Kamsguard Solutions</span>
   </div>
-
   <!-- Toggle button for mobile view -->
-  <button
-    mat-icon-button
-    aria-label="Toggle menu"
-    class="toggle-menu"
-    (click)="toggleMenu()"
-  >
-    <mat-icon>menu</mat-icon>
+  <button 
+    mat-icon-button 
+    aria-label="Toggle menu" 
+    class="toggle-menu" 
+    (click)="toggleMenu()">
+    <mat-icon>{{ isMenuOpen ? 'close' : 'menu' }}</mat-icon>
   </button>
-
   <!-- Navigation Links for Desktop & Mobile -->
   <div class="nav-container" [ngClass]="{'show-menu': isMenuOpen}">
     <div class="nav-links-container">
-      <a class="nav-link" routerLink="/industrial-solutions" routerLinkActive="active">Industrial Solutions</a>
-      <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
-      <a class="nav-link" routerLink="/contact-us" routerLinkActive="active">About Us</a>
+      <a class="nav-link" routerLink="/industrial-solutions" routerLinkActive="active" (click)="closeMenu()">Industrial Solutions</a>
+      <a class="nav-link" routerLink="/products" routerLinkActive="active" (click)="closeMenu()">Products</a>
+      <a class="nav-link" routerLink="/contact-us" routerLinkActive="active" (click)="closeMenu()">About Us</a>
     </div>
-
     <div class="auth-links-container">
-      <a class="auth-link" routerLink="/login" routerLinkActive="active">Login</a>
-      <a class="auth-link" routerLink="/register" routerLinkActive="active">Register</a>
+      <a class="auth-link" routerLink="/login" routerLinkActive="active" (click)="closeMenu()">Login</a>
+      <a class="auth-link" routerLink="/register" routerLinkActive="active" (click)="closeMenu()">Register</a>
     </div>
   </div>
 </mat-toolbar>
