--- a/apps/kamsguard-web/src/app/core/layout/dashboard-header/dashboard-header.component.scss
+++ b/apps/kamsguard-web/src/app/core/layout/dashboard-header/dashboard-header.component.scss
@@ -89,8 +89,8 @@
     gap: 15px;
     button {
       mat-icon {
-        font-size: 18px; // Adjusted icon size for better fit in the header
-        color: #0e2b5c; // Set the same color as sidenav icons
+        font-size: 18px;
+        color: #0e2b5c; 
       }
       &:hover {
         background-color: #f0f0f0; // Subtle hover effect for icons
