--- a/apps/kamsguard-web/src/app/core/layout/dashboard-header/dashboard-header.component.scss
+++ b/apps/kamsguard-web/src/app/core/layout/dashboard-header/dashboard-header.component.scss
@@ -3,12 +3,12 @@
   text-decoration: none;
   display: flex;
   align-items: center;
-  padding: 8px 14px; // Adjusted padding for a sleeker look
-  border-radius: 5px; // Slightly less radius for a modern feel
+  padding: 8px 14px;
+  border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
   .menu-icon {
-    font-size: 20px; // Smaller icon for proportion
-    margin-right: 8px; // Reduced margin
+    font-size: 20px;
+    margin-right: 8px;
   }
 }
 
@@ -16,7 +16,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 64px; // Reduced height for a more compact header
+  height: 64px;
   background-color: #ffffff;
   border-bottom: 1px solid #e0e0e0;
   padding: 0 16px;
@@ -29,16 +29,10 @@
     .brand-logo {
       color: #0e2b5c;
       font-weight: 700;
-      font-size: 1.1em;
+      font-size: 0.8em;
       margin-left: 8px;
       margin-right: 16px;
       cursor: pointer;
-      &:hover {
-        // text-decoration: underline; // Subtle hover effect
-      }
-      @media (max-width: 768px) {
-        font-size: 1.2em; // Responsive increase in size
-      }
     }
     button {
       @include menu-item;
@@ -90,10 +84,10 @@
     button {
       mat-icon {
         font-size: 18px;
-        color: #0e2b5c; 
+        color: #0e2b5c;
       }
       &:hover {
-        background-color: #f0f0f0; // Subtle hover effect for icons
+        background-color: #f0f0f0;
       }
     }
   }
@@ -113,15 +107,22 @@
 }
 
 @media (max-width: 768px) {
+  .brand-logo {
+    display: none;
+  }
+
   .custom-toolbar {
-    padding: 0 8px;
-    height: auto;
-    flex-direction: column;
-    align-items: flex-start;
+    flex-direction: row;
+    padding: 8px;
+    justify-content: space-between;
+
+    .icon-container {
+      display: none;
+    }
+
     .auth-links-container {
-      margin-top: 10px;
       width: 100%;
-      justify-content: space-between;
+      justify-content: flex-end;
     }
   }
 }
