--- a/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
+++ b/apps/kamsguard-web/src/app/core/layout/sidenav/sidenav.component.scss
@@ -1,8 +1,8 @@
-$sidebar-bg-color: #FFFFFF; // Background color for sidebar
-$sidebar-text-color: #21325D; // Text color for sidebar items
-$sidebar-hover-bg-color: rgba(241, 241, 241, 0.8); // Hover background color for links
-$sidebar-active-color: #FC5546; // Color for active links
-$sidebar-shadow-color: rgba(0, 0, 0, 0.1); // Shadow for the sidebar
+$sidebar-bg-color: #FFFFFF; 
+$sidebar-text-color: #21325D; 
+$sidebar-hover-bg-color: rgba(241, 241, 241, 0.8); 
+$sidebar-active-color: #FC5546; 
+$sidebar-shadow-color: rgba(0, 0, 0, 0.1); 
 
 // Define a mixin for common styles
 @mixin menu-item {
@@ -10,8 +10,8 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1); // Shadow for the sidebar
   text-decoration: none;
   display: flex;
   align-items: center;
-  padding: 10px 15px; // Adjusted padding for a balanced look
-  border-radius: 5px; // Reduced radius for a modern feel
+  padding: 10px 15px; 
+  border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
 
   .menu-icon {
@@ -28,7 +28,8 @@ $sidebar-shadow-color: rgba(0, 0, 0, 0.1); // Shadow for the sidebar
   background-color: $sidebar-bg-color;
   position: fixed;
   height: calc(100vh - 80px); 
-  top: 80px; 
+  top: 50px; 
+  width: 250px;
   left: 0;
   z-index: 999;
   padding: 20px 0;
