--- a/apps/kamsguard-web/src/app/features/dashboard.component.scss
+++ b/apps/kamsguard-web/src/app/features/dashboard.component.scss
@@ -34,15 +34,13 @@ $shadow-color: rgba(0, 0, 0, 0.1);
 }
 
 app-sidenav {
-  width: 250px;
-  // background-color: $primary-color;
   height: calc(100vh - 80px); 
   position: fixed;
   top: 80px; /* Below the fixed header */
   left: 0;
   z-index: 999;
   padding-top: 20px;
-  // box-shadow: 2px 0 5px $shadow-color;
+  box-shadow: 2px 0 5px $shadow-color;
 }
 
 .content {
@@ -53,4 +51,8 @@ app-sidenav {
   overflow-y: auto;
   min-height: calc(100vh - 80px); /* Full height minus the header */
   box-shadow: inset 0 0 10px $shadow-color;
+
+  @media (max-width: 768px) {
+    margin-left: 0; /* Adjust content margin for mobile view */
+  }
 }
