--- a/apps/kamsguard-web/src/app/app.component.html
+++ b/apps/kamsguard-web/src/app/app.component.html
@@ -4,11 +4,16 @@
       <app-header></app-header>
     </div>
     <div class="content">
+      <!-- Spinner with dynamic message -->
+      <ngx-spinner bdColor="rgba(0, 0, 0, 0.8)" size="medium" color="#fff" type="ball-scale-ripple-multiple" [fullScreen]="true">
+        <p style="color: white">Please wait...</p> 
+      </ngx-spinner>
+      
+      <!-- Toastr notifications -->
       <app-toastr></app-toastr>
       <router-outlet></router-outlet>
     </div>
   </div>
-
   <div *ngIf="!isDashboardRoute()" class="app-footer">
     <app-footer></app-footer>
   </div>
